apps/base/recipes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipes
  namespace: recipes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recipes
  template:
    metadata:
      labels:
        app: recipes
    spec:
      serviceAccountName: recipes
      containers:
        - name: recipes-nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: static
              mountPath: /static
            - name: media
              mountPath: /media
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
        - name: recipes
          image: vabene1111/recipes:1.5
          command: ['sh', '-c']
          args:
            - |
              gunicorn --bind 0.0.0.0:8080 --workers 2 recipes.wsgi:application
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: media
              mountPath: /app/data/media
            - name: static
              mountPath: /app/data/static
          securityContext:
            runAsUser: 65534
            runAsGroup: 65534
            allowPrivilegeEscalation: false
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 512Mi
      volumes:
        - name: nginx-config
          configMap:
            name: recipes-nginx-config
        - name: media
          persistentVolumeClaim:
            claimName: recipes-media
        - name: static
          persistentVolumeClaim:
            claimName: recipes-static
