apps/base/recipes/svc-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: recipes-postgres
  namespace: recipes
spec:
  ports:
    - port: 5432
      name: postgresql
  selector:
    app: recipes-postgres
  clusterIP: None
